# scipylat-discord-bot

./: .gitignore  README.md  bot.py  pyproject.toml
examples/: example-bot.py  example-sentry.py  example-spreadsheet.py
src/: bot_logging.py  channels.py  conference.py  helpers.py  icons.py  roles.py
src/cogs/: __init__.py  greetings.py  helpers.py  reminders.py  tutorial.py
src/msgs/: channels.py  common.py
